[gd_scene load_steps=25 format=2]

[ext_resource path="res://obj/ship/ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/menu.gd" type="Script" id=2]
[ext_resource path="res://obj/font/spaceAge/space age.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://obj/spawners/rockSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://game.tres" type="Environment" id=5]
[ext_resource path="res://obj/star/star1.tscn" type="PackedScene" id=6]
[ext_resource path="res://obj/teleporter/cosmicTeleporterModule.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/victoryEffect.png" type="Texture" id=8]
[ext_resource path="res://assets/damageEffect.png" type="Texture" id=9]
[ext_resource path="res://assets/home.png" type="Texture" id=10]
[ext_resource path="res://assets/return.png" type="Texture" id=11]
[ext_resource path="res://assets/returnH.png" type="Texture" id=12]
[ext_resource path="res://assets/homeH.png" type="Texture" id=13]
[ext_resource path="res://scn/settings/settings.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UILayer/ui/died:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 2.83778e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UILayer/ui/died:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UILayer/ui/victoryFx:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UILayer/ui/victory:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UILayer/ui/victory:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("UILayer/ui/damagedFx:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("UILayer/ui/afterActionMenu/home:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 416, 384 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("UILayer/ui/afterActionMenu/playAgain:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 544, 600 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "deathMsg"
tracks/0/type = "value"
tracks/0/path = NodePath("UILayer/ui/died:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5, 1 ),
"transitions": PoolRealArray( 0.075, 0.075, 0.075 ),
"update": 0,
"values": [ Vector2( 1e-05, 2.83778e-05 ), Vector2( 1e-05, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UILayer/ui/died:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UILayer/ui/damagedFx:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.03, 0.03 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UILayer/ui/afterActionMenu/playAgain:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 0.07, 0.07 ),
"update": 0,
"values": [ Vector2( 544, 600 ), Vector2( 544, 384 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UILayer/ui/afterActionMenu/home:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 1 ),
"transitions": PoolRealArray( 0.07, 0.07 ),
"update": 0,
"values": [ Vector2( 416, 600 ), Vector2( 416, 384 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "showStats"

[sub_resource type="Animation" id=10]
resource_name = "victoryMsg"
tracks/0/type = "value"
tracks/0/path = NodePath("UILayer/ui/victoryFx:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.03, 0.03 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UILayer/ui/victory:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UILayer/ui/victory:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.5, 1 ),
"transitions": PoolRealArray( 0.03, 0.03, 0.03 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UILayer/ui/afterActionMenu/home:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 0.07, 0.07 ),
"update": 0,
"values": [ Vector2( 416, 600 ), Vector2( 416, 384 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UILayer/ui/afterActionMenu/playAgain:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 1 ),
"transitions": PoolRealArray( 0.07, 0.07 ),
"update": 0,
"values": [ Vector2( 544, 600 ), Vector2( 544, 384 ) ]
}

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 500 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12500, 200 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12500, 200 )

[node name="menu" type="Node"]
script = ExtResource( 2 )

[node name="env" type="WorldEnvironment" parent="."]
environment = ExtResource( 5 )

[node name="animPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
playback_process_mode = 0
anims/RESET = SubResource( 8 )
anims/deathMsg = SubResource( 9 )
anims/showStats = SubResource( 11 )
anims/victoryMsg = SubResource( 10 )

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ui" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="statsText" type="Label" parent="UILayer/ui"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "FPS: 0"

[node name="reachedWalls" type="Label" parent="UILayer/ui"]
modulate = Color( 2, 2, 2, 1 )
self_modulate = Color( 1, 1, 1, 0 )
material = SubResource( 5 )
anchor_left = 0.5
anchor_top = 0.549
anchor_right = 0.5
anchor_bottom = 0.549
margin_left = -250.0
margin_top = -9.40002
margin_right = 250.0
margin_bottom = 9.59998
rect_pivot_offset = Vector2( 250, 9.5 )
custom_fonts/font = SubResource( 4 )
text = "YOU ARE IN THE SECTOR'S BOUNDARY"

[node name="damagedFx" type="TextureRect" parent="UILayer/ui"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 7

[node name="died" type="Label" parent="UILayer/ui"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.0
margin_top = -12.0
margin_right = 265.0
margin_bottom = 12.0
rect_scale = Vector2( 1e-05, 3.75665e-05 )
rect_pivot_offset = Vector2( 265, 0 )
custom_fonts/font = SubResource( 7 )
text = "SHIP DESTROYED"
align = 1

[node name="victoryFx" type="TextureRect" parent="UILayer/ui"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 7

[node name="victory" type="Label" parent="UILayer/ui"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.0
margin_top = -12.0
margin_right = 265.0
margin_bottom = 12.0
rect_scale = Vector2( 1e-05, 3.29721e-05 )
rect_pivot_offset = Vector2( 265, 0 )
custom_fonts/font = SubResource( 7 )
text = "TELEPORTER REPAIRED
-VICTORY-"
align = 1

[node name="afterActionMenu" type="Control" parent="UILayer/ui"]
margin_right = 40.0
margin_bottom = 40.0

[node name="home" type="TextureButton" parent="UILayer/ui/afterActionMenu"]
margin_left = 416.0
margin_top = 599.999
margin_right = 480.0
margin_bottom = 663.999
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="playAgain" type="TextureButton" parent="UILayer/ui/afterActionMenu"]
margin_left = 544.0
margin_top = 599.999
margin_right = 608.0
margin_bottom = 663.999
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="settings" parent="UILayer/ui" instance=ExtResource( 14 )]

[node name="game" type="Node2D" parent="."]
z_index = 1

[node name="map" type="Node2D" parent="game"]

[node name="walls" type="Node2D" parent="game/map"]

[node name="wallNotifier" type="Area2D" parent="game/map/walls"]

[node name="shape5" type="CollisionShape2D" parent="game/map/walls/wallNotifier"]
position = Vector2( 12504, -232 )
scale = Vector2( 1250, 1 )
shape = SubResource( 3 )

[node name="shape6" type="CollisionShape2D" parent="game/map/walls/wallNotifier"]
position = Vector2( 12504, 19768 )
scale = Vector2( 1250, 1 )
shape = SubResource( 3 )

[node name="shape7" type="CollisionShape2D" parent="game/map/walls/wallNotifier"]
position = Vector2( 4, 9768 )
rotation = 1.57085
scale = Vector2( 1250, 1 )
shape = SubResource( 3 )

[node name="shape8" type="CollisionShape2D" parent="game/map/walls/wallNotifier"]
position = Vector2( 25004, 9768 )
rotation = 1.57085
scale = Vector2( 1250, 1 )
shape = SubResource( 3 )

[node name="wall" type="StaticBody2D" parent="game/map/walls"]
position = Vector2( 12504, -232 )
collision_layer = 267
collision_mask = 267

[node name="shape" type="CollisionShape2D" parent="game/map/walls/wall"]
rotation = 3.14159
shape = SubResource( 6 )
one_way_collision = true
one_way_collision_margin = 100.0

[node name="shape2" type="CollisionShape2D" parent="game/map/walls/wall"]
position = Vector2( 0, 20000 )
shape = SubResource( 2 )
one_way_collision = true
one_way_collision_margin = 100.0

[node name="shape3" type="CollisionShape2D" parent="game/map/walls/wall"]
position = Vector2( 12500, 10000 )
rotation = -1.5708
shape = SubResource( 2 )
one_way_collision = true
one_way_collision_margin = 100.0

[node name="shape4" type="CollisionShape2D" parent="game/map/walls/wall"]
position = Vector2( -12504, 9784 )
rotation = 1.5708
shape = SubResource( 2 )
one_way_collision = true
one_way_collision_margin = 100.0

[node name="mapTween" type="Tween" parent="game/map"]

[node name="shipHere" type="Node2D" parent="game"]

[node name="ship" parent="game/shipHere" instance=ExtResource( 1 )]
position = Vector2( 12744, 9472 )

[node name="rocks" type="Node2D" parent="game"]
position = Vector2( 0, -8 )

[node name="stations" type="Node2D" parent="game"]
process_priority = -1
position = Vector2( -32, 22 )

[node name="cosmicTeleporterModule" parent="game/stations" instance=ExtResource( 7 )]
position = Vector2( 10552, 10682 )

[node name="enemy" type="Node2D" parent="game"]

[node name="star1" parent="game/enemy" instance=ExtResource( 6 )]
position = Vector2( 17944, 10576 )

[node name="spawners" type="Node2D" parent="game"]

[node name="rockSpawner" parent="game/spawners" instance=ExtResource( 4 )]
position = Vector2( 1424, 1512 )
spawnDirection = Vector2( 1500, 750 )

[node name="rockSpawner2" parent="game/spawners" instance=ExtResource( 4 )]
position = Vector2( 23720, 1048 )
spawnDirection = Vector2( -1500, 750 )

[node name="rockSpawner3" parent="game/spawners" instance=ExtResource( 4 )]
position = Vector2( 1432, 18264 )
spawnDirection = Vector2( 1500, -750 )

[node name="rockSpawner4" parent="game/spawners" instance=ExtResource( 4 )]
position = Vector2( 23368, 17736 )
spawnDirection = Vector2( -1500, 750 )

[connection signal="pressed" from="UILayer/ui/afterActionMenu/home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="UILayer/ui/afterActionMenu/playAgain" to="." method="_on_playAgain_pressed"]
[connection signal="body_entered" from="game/map/walls/wallNotifier" to="." method="_on_wallNotifier_body_entered"]
[connection signal="body_exited" from="game/map/walls/wallNotifier" to="." method="_on_wallNotifier_body_exited"]
